--- a/m2e-maven-runtime/org.eclipse.m2e.maven.runtime/pom.xml
+++ b/m2e-maven-runtime/org.eclipse.m2e.maven.runtime/pom.xml
@@ -27,9 +27,17 @@
     <!-- below are m2e-specific addons -->
     <plexus-build-api.version>0.0.7</plexus-build-api.version>
     <okhttp-connector.version>0.17.2</okhttp-connector.version>
+    <okhttp-connector.version>0.17.1</okhttp-connector.version>
+    <concurrent-localrepo.version>0.11.2</concurrent-localrepo.version>
   </properties>
 
   <dependencies>
+    <!-- this overrides default local repo implementation and must be BEFORE maven -->
+    <dependency>
+      <groupId>io.takari.aether</groupId>
+      <artifactId>takari-local-repository</artifactId>
+      <version>${concurrent-localrepo.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
