--- a/org.eclipse.m2e.jdt/plugin.xml
+++ b/org.eclipse.m2e.jdt/plugin.xml
@@ -89,4 +89,33 @@
             name="Main Classifier Classpath Provider">
       </classifierClasspathProvider>
    </extension>
+   
+ <extension
+       id="buildpreventer"
+       name="Unconfigured Build Preventer"
+       point="org.eclipse.core.resources.builders">
+    <builder
+          callOnEmptyDelta="true"
+          hasNature="false"
+          isConfigurable="false">
+       <run
+             class="org.eclipse.m2e.jdt.internal.BuildPreventer">
+       </run>
+    </builder>
+ </extension>
+ <extension
+       id="classpathmissing"
+       name=".classpath missing"
+       point="org.eclipse.core.resources.markers">
+       <super
+             type="org.eclipse.core.resources.problemmarker">
+       </super>
+       <super
+             type="org.eclipse.core.resources.textmarker">
+       </super>
+       <super
+             type="org.eclipse.jdt.core.buildpath_problem">
+       </super>
+ </extension>
+
 </plugin>
