--- a/org.eclipse.m2e.jdt/plugin.xml
+++ b/org.eclipse.m2e.jdt/plugin.xml
@@ -108,7 +108,7 @@
           hasNature="false"
           isConfigurable="false">
        <run
-             class="org.eclipse.m2e.jdt.BuildPreventer">
+             class="org.eclipse.m2e.jdt.internal.BuildPreventer">
        </run>
     </builder>
  </extension>
