--- a/org.eclipse.m2e.jdt/plugin.xml
+++ b/org.eclipse.m2e.jdt/plugin.xml
@@ -92,6 +92,7 @@
    
  <extension
        id="buildpreventer"
+       name="Unconfigured Build Preventer"
        point="org.eclipse.core.resources.builders">
     <builder
           callOnEmptyDelta="true"
