--- a/m2e-maven-runtime/org.eclipse.m2e.maven.runtime/pom.xml
+++ b/m2e-maven-runtime/org.eclipse.m2e.maven.runtime/pom.xml
@@ -28,7 +28,7 @@
     <plexus-build-api.version>0.0.7</plexus-build-api.version>
     <okhttp-connector.version>0.17.2</okhttp-connector.version>
     <okhttp-connector.version>0.17.1</okhttp-connector.version>
-    <concurrent-localrepo.version>0.11.2</concurrent-localrepo.version>
+    <concurrent-localrepo.version>0.11.2-gebit1</concurrent-localrepo.version>
   </properties>
 
   <dependencies>
