--- a/org.eclipse.m2e.jdt/plugin.xml
+++ b/org.eclipse.m2e.jdt/plugin.xml
@@ -89,7 +89,13 @@
             name="Main Classifier Classpath Provider">
       </classifierClasspathProvider>
    </extension>
-   
+  <extension
+        point="org.eclipse.jdt.core.compilationParticipant">
+     <compilationParticipant
+           class="org.eclipse.m2e.jdt.internal.MavenCompilationParticipant"
+           id="org.eclipse.m2e.jdt.compilationParticipant">
+     </compilationParticipant>
+  </extension>
  <extension
        id="buildpreventer"
        name="Unconfigured Build Preventer"
