--- a/org.eclipse.m2e.core/plugin.xml
+++ b/org.eclipse.m2e.core/plugin.xml
@@ -38,6 +38,7 @@
               name="%m2.builder.name">
       <builder hasNature="true" isConfigurable="false">
          <run class="org.eclipse.m2e.core.internal.builder.MavenBuilder"/>
+		<dynamicReference class="org.eclipse.m2e.core.internal.builder.DynamicMavenProjectReferences"/>
       </builder>
    </extension>
    <extension point="org.eclipse.core.resources.natures"
@@ -56,7 +57,7 @@
     </factory>
   </extension>
 
-	<!-- Changes to marker IDs, or additions also need to be 
+	<!-- Changes to marker IDs, or additions also need to be
 	     changed in org.eclipse.m2e.core.ui/plugin.xml -->
    <extension point="org.eclipse.core.resources.markers"
          id="maven2Problem"
@@ -133,5 +134,5 @@
             class="org.eclipse.m2e.core.internal.project.WorkspaceTestsClassifierResolver">
       </resolver>
    </extension>
-   
+
 </plugin>
