--- a/org.eclipse.m2e.jdt/plugin.xml
+++ b/org.eclipse.m2e.jdt/plugin.xml
@@ -132,6 +132,23 @@
        <super
              type="org.eclipse.jdt.core.buildpath_problem">
        </super>
+       <persistent
+             value="true">
+       </persistent>
+ </extension>
+ <extension
+       id="buildprevented_followup"
+       name="build prevented"
+       point="org.eclipse.core.resources.markers">
+       <super
+             type="org.eclipse.core.resources.problemmarker">
+       </super>
+       <super
+             type="org.eclipse.core.resources.textmarker">
+       </super>
+       <persistent
+             value="true">
+       </persistent>
  </extension>
 
 </plugin>
