Bug 547760 - Errors in the log "Failed to evaluate: ReferenceExpression [definitionId=org.eclipse.m2e.sourcelookup.ui.m2estratum]"
Only test "org.eclipse.jdt.launching.jdtstratum" property on appropriate
elements (org.eclipse.debug.core.model.DebugElement) to avoid runtime
exceptions.

Change-Id: I81b280ff9bc8fd2e29430c1de96319b386de2304
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

--- a/org.eclipse.m2e.sourcelookup.ui/plugin.xml
+++ b/org.eclipse.m2e.sourcelookup.ui/plugin.xml
@@ -87,7 +87,10 @@
             </count>
             <iterate
                   ifEmpty="false"
-                  operator="or">
+                  operator="and">
+               <instanceof
+                     value="org.eclipse.debug.core.model.DebugElement">
+               </instanceof>
                <test
                      property="org.eclipse.jdt.launching.jdtstratum">
                </test>
