Added resolver extension

--- a/org.eclipse.m2e.core/plugin.properties
+++ b/org.eclipse.m2e.core/plugin.properties
@@ -40,4 +40,5 @@ extension-point.changed.name = mavenProjectChangedListeners
 extension-point.lifecycleMappingMetadataSource.name = Lifecycle Mapping Metadata Source
 extension-point.projectConversionParticipants.name= Project conversion participants
 extension-point.lifecycleParticipants.name= Maven Lifecycle Participants
+extension-point.resolverExtension.name= Maven Resolver extensions
 extension-point.workspaceClassifierResolvers.name= Workspace classifier resolvers
