--- a/org.eclipse.m2e.core/plugin.xml
+++ b/org.eclipse.m2e.core/plugin.xml
@@ -21,6 +21,7 @@
    <extension-point id="incrementalBuildFrameworks" name="%extension-point.incrementalBuildFrameworks.name" schema="schema/incrementalBuildFrameworks.exsd"/>
    <extension-point id="workspaceClassifierResolvers" name="%extension-point.workspaceClassifierResolvers.name" schema="schema/workspaceClassifierResolvers.exsd"/>
    <extension-point id="lifecycleParticipants" name="%extension-point.lifecycleParticipants.name" schema="schema/lifecycleParticipants.exsd"/>
+   <extension-point id="resolverExtensions" name="%extension-point.resolverExtensions.name" schema="schema/resolverExtensions.exsd"/>
 
    <extension point="org.eclipse.core.runtime.contentTypes">
      <content-type id="pomFile" name="%content-type.name"
