--- a/m2e-maven-runtime/org.eclipse.m2e.maven.runtime.slf4j.simple/pom.xml
+++ b/m2e-maven-runtime/org.eclipse.m2e.maven.runtime.slf4j.simple/pom.xml
@@ -36,17 +36,28 @@
 
   <properties>
     <!-- maven core version -->
-    <slf4j-simple.version>1.7.5</slf4j-simple.version>
+    <maven-core.version>3.6.2</maven-core.version>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>${slf4j-simple.version}</version>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-slf4j-provider</artifactId>
       <optional>true</optional>
     </dependency>
   </dependencies>
+  
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven</artifactId>
+        <version>${maven-core.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
@@ -57,7 +68,7 @@
           <instructions>
             <Embed-Directory>jars</Embed-Directory>
             <Embed-Dependency>
-              slf4j-simple
+              maven-slf4j-provider
             </Embed-Dependency>
             <Import-Package>!*</Import-Package>
             <Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
